--- a/data/carousel/service-op-maat.yaml
+++ b/data/carousel/service-op-maat.yaml
@@ -1,4 +1,4 @@
 weight: 1
 title: "Service op maat"
-description: "<p>E-Trico zorgt voor de gepaste installatie voor uw specifieke veriesten.</p>"
+description: "<p>E-Trico zorgt voor de gepaste installatie voor uw specifieke vereisten.</p>"
 image: "img/carousel/logo website.png"
