--- a/hugo.toml
+++ b/hugo.toml
@@ -214,9 +214,8 @@ pluralizelisttitles = false
     subtitle = "Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo."
     hide_summary = false
 
-[params.footer.license]
-    enable = true
-    title = Vergunde onderneming voor alarmsystemen en camerasystemen volgens KBO 0786767097 
+[params.footer.recent_posts]
+    enable = false
 
 [taxonomies]
     category = "categories"
